<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/top_of_home_background"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/rlAppName"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginEnd="137dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="monospace"
                android:text="CineMate"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="113dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="-12dp"
                app:srcCompat="@drawable/logo" />

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageButton
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/p_image1"
            android:onClick="changeImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_images"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/like"
            app:icon="@drawable/love"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <Button
            android:id="@+id/btn_wish_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wish_list"
            app:icon="@drawable/wish_list"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>

        <Button
            android:id="@+id/btn_creators"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/creators"
            app:icon="@drawable/baseline_create_24" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/info_movie"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="italic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <Button
                android:id="@+id/main_return"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_return"
                app:icon="@drawable/baseline_exit_to_app_24" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <Button
                android:id="@+id/btn_ticket_p"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/purchase_tickets"
                app:icon="@drawable/ticketvector"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>



