<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical">


    <FrameLayout

        android:layout_width="340dp"
        android:layout_height="190dp"
        android:layout_gravity="center"
        android:background="@drawable/top_of_home_background"
        android:fitsSystemWindows="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="50dp" />


    </FrameLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="0.1"/>

    <FrameLayout

        android:layout_width="322dp"
        android:layout_height="485dp"
        android:layout_gravity="center"
        android:background="@drawable/top_of_home_background"
        android:fitsSystemWindows="true">

        <androidx.cardview.widget.CardView
            android:layout_width="246dp"
            android:layout_height="350dp"
            android:layout_gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tickets"
                android:textSize="40dp" />

            <ListView
                android:id="@+id/PruchaseListView"
                android:layout_width="wrap_content"
                android:layout_height="307dp"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"

                android:paddingTop="10dp"
                android:paddingBottom="10dp" />


        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/main_return"
        android:layout_width="295dp"
        android:layout_height="82dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="1"
        android:text="@string/_return"
        app:icon="@drawable/baseline_exit_to_app_24" />


</LinearLayout>