<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/top_of_home_background"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/rlAppName"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginEnd="137dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="monospace"
                android:text="CineMate"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="113dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="-12dp"
                app:srcCompat="@drawable/logo" />

        </RelativeLayout>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="166dp"
            android:scaleType="fitXY"
            android:src="@drawable/p_image1" />

        <Button
            android:id="@+id/btn_cinemaSelection"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"

            android:text="@string/SelectCinema"
            app:icon="@drawable/cinema" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TicketActivity">

        <Spinner
            android:id="@+id/chooseCategorySpinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"


        android:entries="@array/category_options" />

        <TextView
            android:id="@+id/quantityTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chooseCategorySpinner1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textColor="@color/white"/>


        <SeekBar
            android:id="@+id/quantitySeekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityTextView1"
            android:layout_marginTop="8dp"
            android:max="10"
            android:progress="0"
            android:thumbTint="@color/white"/>

        <TextView
            android:id="@+id/totalPriceTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantitySeekBar1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@color/white"/>



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TicketActivity">

        <Spinner
            android:id="@+id/chooseCategorySpinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:entries="@array/category_options" />

        <TextView
            android:id="@+id/quantityTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chooseCategorySpinner2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textColor="@color/white"/>


        <SeekBar
            android:id="@+id/quantitySeekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityTextView2"
            android:layout_marginTop="8dp"
            android:max="10"
            android:progress="0"
            android:thumbTint="@color/white"/>

        <TextView
            android:id="@+id/totalPriceTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantitySeekBar2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@color/white"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".TicketActivity">

        <Spinner
            android:id="@+id/chooseCategorySpinner3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:entries="@array/category_options" />

        <TextView
            android:id="@+id/quantityTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chooseCategorySpinner3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textColor="@color/white"/>

        <SeekBar
            android:id="@+id/quantitySeekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityTextView3"
            android:layout_marginTop="8dp"
            android:max="10"
            android:progress="0"
            android:thumbTint="@color/white"/>

        <TextView
            android:id="@+id/totalPriceTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantitySeekBar3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <Button
            android:id="@+id/orderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/purchase_tickets"
            app:icon="@drawable/ticketvector"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>


    </LinearLayout>


</LinearLayout>
